<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="@dimen/default_horizontal_padding"
    android:paddingStart="@dimen/default_horizontal_padding">

    <ImageView
        android:id="@+id/hero_image_profile"
        android:layout_width="@dimen/hero_detail_profile_image"
        android:layout_height="@dimen/hero_detail_profile_image"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/default_margin"
        android:transitionName="@string/image_animation_name"
        tools:src="@drawable/ironman_cry" />

    <LinearLayout
        android:id="@+id/name_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hero_image_profile"
        android:orientation="vertical">

        <TextView
            android:id="@+id/superhero_name"
            style="@style/SuperheroNameStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:transitionName="@string/superhero_animation_name"
            tools:text="Ironman" />

        <TextView android:layout_marginTop="@dimen/defaul_margin_mini"
            android:id="@+id/real_name"
            style="@style/RealNameStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:transitionName="@string/realname_animation_name"
            tools:text="Tony Stark" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/separtor_line_height"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@color/accent" />
    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_panel"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/card_hero_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:backgroundTint="@color/cardview_background"
                android:elevation="@dimen/cardview_default_elevation"
                android:padding="@dimen/cardview_padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/defaul_margin_mini"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TitleHeroStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/defaul_margin_mini"
                        android:text="@string/info_title" />

                    <View
                        android:layout_width="200dp"
                        android:layout_height="@dimen/separtor_line_height"
                        android:layout_gravity="start"
                        android:layout_margin="@dimen/defaul_margin_mini"
                        android:background="@color/accent" />

                    <TextView
                        android:id="@+id/hero_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/defaul_margin_mini"
                        tools:text="None; Tony's body had been enhanced by the modified techno-organic virus, Extremis, but it is currently inaccessible and inoperable." />
                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_hero_powers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_hero_info"
                android:layout_marginTop="@dimen/default_margin"
                android:backgroundTint="@color/cardview_background"
                android:elevation="@dimen/cardview_default_elevation"
                android:padding="@dimen/cardview_padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/defaul_margin_mini"
                    android:background="@color/cardview_background"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TitleHeroStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/defaul_margin_mini"
                        android:text="@string/powers_title" />

                    <View
                        android:layout_width="@dimen/separator_line_details_width"
                        android:layout_height="@dimen/separtor_line_height"
                        android:layout_gravity="start"
                        android:layout_margin="@dimen/defaul_margin_mini"
                        android:background="@color/accent" />

                    <TextView
                        android:id="@+id/hero_powers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/defaul_margin_mini"
                        tools:text="None; Tony's body had been enhanced by the modified techno-organic virus, Extremis, but it is currently inaccessible and inoperable." />
                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_hero_abilities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_hero_powers"
                android:layout_marginTop="@dimen/default_margin"
                android:backgroundTint="@color/cardview_background"
                android:elevation="@dimen/cardview_default_elevation"
                android:padding="@dimen/cardview_padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/defaul_margin_mini"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TitleHeroStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/defaul_margin_mini"
                        android:text="@string/abilities_title" />

                    <View
                        android:layout_width="@dimen/separator_line_details_width"
                        android:layout_height="@dimen/separtor_line_height"
                        android:layout_gravity="start"
                        android:layout_margin="@dimen/defaul_margin_mini"
                        android:background="@color/accent" />

                    <TextView
                        android:id="@+id/hero_abilitites"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/defaul_margin_mini"
                        tools:text="None; Tony's body had been enhanced by the modified techno-organic virus, Extremis, but it is currently inaccessible and inoperable." />
                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_hero_abilities"
                android:layout_marginTop="@dimen/default_margin"
                android:backgroundTint="@color/cardview_background"
                android:elevation="@dimen/cardview_default_elevation"
                android:padding="@dimen/cardview_padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TitleHeroStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/defaul_margin_mini"
                        android:text="@string/groups_title" />

                    <View
                        android:layout_width="@dimen/separator_line_details_width"
                        android:layout_height="@dimen/separtor_line_height"
                        android:layout_gravity="start"
                        android:layout_margin="@dimen/defaul_margin_mini"
                        android:background="@color/accent" />

                    <TextView
                        android:id="@+id/hero_groups"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/defaul_margin_mini"
                        tools:text="None; Tony's body had been enhanced by the modified techno-organic virus, Extremis, but it is currently inaccessible and inoperable." />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>